samples/_failures_safe/1761325786_1db021_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_185a1c89.c: In function ‘main’:
./samples/SAFE/__tmp_185a1c89.c:140:5: error: expected declaration or statement at end of input
  140 |     switch (op) {
      |     ^~~~~~
./samples/SAFE/__tmp_185a1c89.c:140:5: error: expected declaration or statement at end of input
